<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewClickHandler"
            type="com.assignmenthyperlink.ui.task3.viewmodel.Task3ViewModel.ViewClickHandler" />

        <variable
            name="viewModel"
            type="com.assignmenthyperlink.ui.task3.viewmodel.Task3ViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.assignmenthyperlink.custom.CEditTextView
                android:id="@+id/tvName"
                style="@style/txt_000_12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawablePadding="@dimen/_16sdp"
                android:imeOptions="actionDone"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:singleLine="true" />

            <com.assignmenthyperlink.custom.CButtonViewB
                style="@style/txt_000_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:includeFontPadding="false"
                android:onClick="@{(v)->viewClickHandler.onAdd(v)}"
                android:paddingHorizontal="@dimen/_18sdp"
                android:paddingVertical="@dimen/_14sdp"
                android:singleLine="true"
                android:text="Add"
                android:textAllCaps="true" />

            <com.assignmenthyperlink.custom.CButtonViewB
                style="@style/txt_000_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:includeFontPadding="false"
                android:onClick="@{(v)->viewClickHandler.onDelete(v)}"
                android:paddingHorizontal="@dimen/_18sdp"
                android:paddingVertical="@dimen/_14sdp"
                android:singleLine="true"
                android:text="Delete"
                android:textAllCaps="true" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLeft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_task_3" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <com.assignmenthyperlink.custom.CButtonViewB
                    style="@style/txt_000_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:onClick="@{(v)->viewClickHandler.onCopyRight(v)}"
                    android:paddingHorizontal="@dimen/_18sdp"
                    android:paddingVertical="@dimen/_14sdp"
                    android:singleLine="true"
                    android:text="@string/copyright"
                    android:textAllCaps="true" />

                <com.assignmenthyperlink.custom.CButtonViewB
                    style="@style/txt_000_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:onClick="@{(v)->viewClickHandler.onCopyLeft(v)}"
                    android:paddingHorizontal="@dimen/_18sdp"
                    android:paddingVertical="@dimen/_14sdp"
                    android:singleLine="true"
                    android:text="@string/copy"
                    android:textAllCaps="true" />

                <com.assignmenthyperlink.custom.CButtonViewB
                    style="@style/txt_000_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:onClick="@{(v)->viewClickHandler.onMoveRight(v)}"
                    android:paddingHorizontal="@dimen/_18sdp"
                    android:paddingVertical="@dimen/_14sdp"
                    android:singleLine="true"
                    android:text="@string/move"
                    android:textAllCaps="true" />

                <com.assignmenthyperlink.custom.CButtonViewB
                    style="@style/txt_000_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:onClick="@{(v)->viewClickHandler.onMoveLeft(v)}"
                    android:paddingHorizontal="@dimen/_18sdp"
                    android:paddingVertical="@dimen/_14sdp"
                    android:singleLine="true"
                    android:text="@string/moveleft"
                    android:textAllCaps="true" />

                <com.assignmenthyperlink.custom.CButtonViewB
                    style="@style/txt_000_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:onClick="@{(v)->viewClickHandler.onSwap(v)}"
                    android:paddingHorizontal="@dimen/_18sdp"
                    android:paddingVertical="@dimen/_14sdp"
                    android:singleLine="true"
                    android:text="Swap"
                    android:textAllCaps="true" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_task_3" />

        </LinearLayout>


    </LinearLayout>

</layout>